public/css/VideoGrid.css
#videoMediaContainer {
    z-index: 1;
    position: absolute;
    display: flex;
    top: 0;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    align-content: center;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    vertical-align: middle;
    overflow: hidden;
    /* border: 3px solid blue; */
}

#videoPinMediaContainer {
    z-index: 1;
    position: absolute;
    display: none;
    top: 0;
    left: 0;
    width: 75%;
    height: 100%;
    border-radius: 5px;
    box-shadow: var(--box-shadow);
    overflow: hidden;
    /* animation: show 0.4s ease; */
    /* border: 3px solid lime; */
}

.Camera {
    position: relative;
    vertical-align: middle;
    align-self: center;
    overflow: hidden;
    display: inline-block;
    background: transparent;
    border-radius: 10px;
    border: var(--border);
    box-shadow: var(--box-shadow);
    animation: show 0.4s ease;
}

/* .Camera:hover {
    border: 3px solid rgb(113, 157, 239);
} */

#videoMediaContainer i {
    position: absolute;
    display: none;
    top: 0;
    color: rgb(0, 255, 71);
    font-size: 14px;
    align-items: center;
    padding: 5px;
    margin: 5px;
    width: auto;
    height: 25px;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.4);
}

.videoAvatarImage {
    z-index: 7;
    position: absolute;
    display: none;
    width: var(--vmi-wh);
    height: var(--vmi-wh);
    border-radius: 50%;
}

.audio {
    position: absolute;
    right: 0;
    color: #fff;
    margin: 5px;
    width: auto;
    height: 25px;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.1);
}

.nostr {
    z-index: 1;
    position: absolute;
    right: 0;
    bottom: 25px;
    color: #fff;
    font-size: 10px;
    display: flex;
    align-items: center;
    padding: 5px;
    margin: 5px;
    width: auto;
    height: 25px;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.1);
}

.nostr-image-button {
    background-image: url('../images/nostrg.png');
    z-index: 1;
    position: absolute;
    left: 0;
    top: 15px;
    display: flex;
    align-items: center;
    padding: 5px;
    margin: 5px;
    width: 50px; /* Set your image width */
    height: 50px; /* Set your image height */
    border-radius: 5px; /* Remove button border */
    background-size: cover; /* Ensure the image covers the button */
    cursor: pointer; /* Add pointer cursor on hover */
}

.zap-image-button {
    background-image: url('../images/lngradient.png');
    z-index: 1;
    position: absolute;
    right: 10px;
    bottom: 25px;
    display: flex;
    align-items: center;
    padding: 5px;
    margin: 5px;
    width: 40px; /* Set your image width */
    height: 40px; /* Set your image height */
    border-radius: 5px; /* Remove button border */
    background-size: cover; /* Ensure the image covers the button */
    cursor: pointer; /* Add pointer cursor on hover */
}

.username {
    z-index: 1;
    position: absolute;
    right: 0;
    bottom: 0;
    color: #fff;
    font-size: 10px;
    display: flex;
    align-items: center;
    padding: 5px;
    margin: 5px;
    width: auto;
    height: 25px;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.1);
}

.fscreen {
    position: absolute;
    right: 0;
    bottom: 0px;
    color: #fff;
    margin: 5px;
    width: auto;
    height: 25px;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.1);
}

.videoMenuBar {
    z-index: 2;
    position: absolute;
    display: inline;
    top: 0;
    left: 0;
    padding: 20px;
    background: rgba(0, 0, 0, 0.2);
    font-size: small;
    font-weight: bold;
    text-align: center;
    width: 100%;
    cursor: default;
    overflow: hidden;
    transform: translateY(-100%);
    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
}

.videoMenuBar.active {
    transform: translateY(0);
}

.videoMenuBar input,
.videoMenuBar button {
    float: right;
    color: #fff;
    background: transparent;
    border-radius: 5px;
    border: none;
}

.videoMenuBar button:hover {
    color: grey;
    transition: all 0.3s ease-in-out;
}

.peer-name-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.peer-name {
    font-weight: bold;
    color: #444444;
}

@media (max-width: 768px) {
    .videoMenuBar {
        position: fixed;
        padding: 15px;
        padding-left: 65px;
        bottom: 0;
        background: rgba(0, 0, 0, 1);
        transform: translateY(100%);
        transition: transform 0.3s ease-out, opacity 0.3s ease-out;
        display: grid !important;
        grid-gap: 10px 5px;
        grid-template-columns: 50%;
        grid-template-rows: 18% auto;
        grid-template-areas:
            "header header"
            "controls controls";
        align-content: start;
        justify-items: start;
        overflow-y: auto;
        z-index: 1000;
    }
    
    .videoMenuBar .nostr-image-button {
        top: 10px;
        left: 65px !important;
        width: 50px;
        height: 50px;
    }

    .videoMenuBar .peer-name-header {
        grid-area: header;
        width: 100%;
        padding: 40px;
        background-color: rgba(255, 255, 255, 0.2);
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        border-radius: 10px;
        margin-bottom: 10px;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .videoMenuBar .peer-name {
        font-size: 18px;
        font-weight: bold;
        color: #fff;
        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
        background-color: rgba(36, 36, 36, 0.8);
        border-radius: 10px;
        padding: 6px;
        width: 100%;
    }

    .videoMenuBar input,
    .videoMenuBar button {
        font-size: 16px;
        color: #fff;
        background: rgba(255, 255, 255, 0.2);
        width: 100%;
        height: 45px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 10px;
    }

    .videoMenuBar .fas,
    .videoMenuBar .fab {
        font-size: 20px;
        margin-right: 8px;
        transition: color 0.3s;
    }

    .videoMenuBar input[type="range"] {
        width: 100%;
        margin: 5px 0;
        background: rgba(255, 255, 255, 0.1);
        border-radius: 5px;
        height: 5px;
    }

    .videoMenuBar button:active {
        background: rgba(255, 255, 255, 0.3);
    }
}

.expand-video-content {
    position: relative;
    display: none;
    float: right;
    width: auto;
}

.expand-video:hover .expand-video-content {
    display: inline-flex;
}

#videoMediaContainer video {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
}

.videoCircle {
    position: absolute;
    width: var(--vmi-wh);
    height: var(--vmi-wh);
    border-radius: 50%;
    /* center */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
}

.videoDefault {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: '10px';
}

video {
    width: 100%;
    height: 100%;
    object-fit: var(--videoObjFit);
    border-radius: 10px;
    cursor: pointer;
}

video:hover {
    opacity: 0.9;
}

video:fullscreen {
    object-fit: contain;
    opacity: 1;
}

.mirror {
    -webkit-transform: rotateY(180deg);
    -moz-transform: rotateY(180deg);
    transform: rotateY(180deg);
}

.blur {
    -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
    -o-filter: blur(5px);
    -ms-filter: blur(5px);
    filter: blur(5px);
}

input[type='range'] {
    /* display: none; */
    color: #fff;
    width: 50px;
    cursor: pointer;
}

@keyframes show {
    0% {
        opacity: 0;
        transform: scale(0.4) translateY(20px);
    }
    100% {
        opacity: 1;
        transform: scale(1) translateY(0);
    }
}

@media screen and (max-width: 600px) {
    .username {
        font-size: 12px;
    }
}
@media screen and (max-width: 500px) {
    .username {
        font-size: 10px;
    }
}

